adding new files

--- a/csit/3sem/coa/2078.html
+++ b/csit/3sem/coa/2078.html
@@ -77,7 +77,7 @@
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2078</p>
-                <p>Object oriented programming (CSIT.214)</p>
+                <p>Computer Organization and Architecture(CSIT.211))</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,56 +97,40 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What is function overloading?</li>
-                        <li>Define data abstraction in oops.</li>
-                        <li>Define default argument with example.</li>
-                        <li>Which operators can not be overloading in C++?</li>
-                        <li>What is pure virtual function?</li>
-                        <li>What is namespace? Give an example.</li>
-                        <li>List any two differences between class and objects.</li>
-                        <li>what is container class?</li>
+                        <li>Explain the BCD with example.</li>
+                        <li>What is an error detection code?</li>
+                        <li>differentiate between RISC and CISC architecture.</li>
+                        <li>Explain binary incrementer with its block diagrams.</li>
+                        <li>What is vector processing? Write tis application.</li>
+                        <li>Explain the data transfer and manipulcation instruction with example.</li>
+                        <li>Explain circular shift micro operation with its example.</li>
+                        <li>Write short notes on hit and miss ratio.</li>
                         <h5 class="text-center">Group B</h5>
-                        <b>
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
-                        </b>
-                        <li>What is inline function?Write a program to calculate cube of a number?. </li>
-                        <li>What is template? WAP to add two numbers using concepts of template..</li>
-                        <li>How do you convert one .class type to another class type? Write a c++ program to convert
-                            degree to radian using the concept of class yo -class type conversion.</li>
-                        <li>What is exception? Explain the mechanism of exception handling? </li>
-                        <li>What is dyamic memory allocation? Write a program to add to string using dynamic constructor
-                            concepts. </li>
-                        <li>Define virtual function with suitable example. </li>
+                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
+                        <li>Explain the DMA controller with block diagram.</li>
+                        <li>Differentiate tightly coupled and loosely coupled multiprocessor system with suitable example.</li>
+                        <li>What do you mean by interrupt? Draw and explain the flowchart for interrupt cycle.</li>
+                        <li>What are the key characteristics of computer memory ssytem. Explain.</li>
+                        <li>Differentiate between micro programmed control unit and hardwired control unit.</li>
+                        <li>What do you mean by addressing mode? Explain.</li>
                         <h5 class="text-center">Group C</h5>
-                        <b>
-                            <p class="text-center">Attempt any three questions. (Long questions)</p>
-                        </b>
-                        <li>What are the limitation of procedure-oriented programming?mention the features of oops with
-                            example.
-                        </li>
-                        <li>What are the rules of operator overloading? create a class called complex with data member
-                            real and imaginary. use necessary
-                            function and write a program to overload binary plus (+)to add two complex numbers and
-                            display result.
-                        </li>
-                        <li>Explain the need of inheritance in programming?write syntax and structure of single ,
-                            multiple and multilevel inheritance. illustrate virtual base class concepts with diagram and
-                            syntax only.
-                        </li>
-                        <li>Define construction? Explain the types of construction with example.
-                        </li>
+                        <b> <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p></b>
+                        <li>What is cache coherence problem? What are the different methods to avoid cache coherence problem? Explain in detail about different forms of interconnection structure of a multiprocessor system.</li>
+                        <li>What is pipelining? Explain Arithmetic pipelin in detail.</li>
+                        <li>DEscribe multiplication process using booth algorithm of the following binary number: Y=8 x (-6).</li>
+                        <li>What is input-output processor (IOP)? Why is IOP needed in computer system? Explain.</li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Third Semester</h4>
                 <ol>
-                    <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                    <li><a href="">Discrete Structure</a></li>
-                    <li><a href="../management/2078.html">Introduction To Management</a></li>
-                    <li><a href="#">Object Oriented Programming with C++</a></li>
-                    <li><a href="../os/2078.html">Operating System</a></li>
-                    <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                  <li><a href="#">Computer Architecture</a></li>
+                  <li><a href="#">Discrete Structure</a></li>
+                  <li><a href="../management/2078.html">Introduction To Management</a></li>
+                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
+                  <li><a href="../os/2078.html">Operating System</a></li>
+                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
                 </ol>
             </div>
         </div>
