--- a/csit/3sem/os/2078.html
+++ b/csit/3sem/os/2078.html
@@ -77,7 +77,7 @@
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2078</p>
-                <p>Object oriented programming (CSIT.214)</p>
+                <p>Operating System (CSIT.215)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,43 +97,78 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What is function overloading?</li>
-                        <li>Define data abstraction in oops.</li>
-                        <li>Define default argument with example.</li>
-                        <li>Which operators can not be overloading in C++?</li>
-                        <li>What is pure virtual function?</li>
-                        <li>What is namespace? Give an example.</li>
-                        <li>List any two differences between class and objects.</li>
-                        <li>what is container class?</li>
+                        <li>Explain virtual memory.</li>
+                        <li>Explain the terms 'pipes', 'FIFO' and 'message'.</li>
+                        <li>Explain in short the command line interface (CLI) and graphical shells.</li>
+                        <li>What are the difference between process and program?</li>
+                        <li>What is two state process model?</li>
+                        <li>Write short notes on symbolic address, relative address and physical address.</li>
+                        <li>What is deadlock? Explain with example.</li>
+                        <li>Find the internal fragmentation for given page size 3048 bytes and process address space of
+                            144489 bytes.</li>
+                        <!-- Group B -->
                         <h5 class="text-center">Group B</h5>
                         <b>
                             <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
                         </b>
-                        <li>What is inline function?Write a program to calculate cube of a number?. </li>
-                        <li>What is template? WAP to add two numbers using concepts of template..</li>
-                        <li>How do you convert one .class type to another class type? Write a c++ program to convert
-                            degree to radian using the concept of class yo -class type conversion.</li>
-                        <li>What is exception? Explain the mechanism of exception handling? </li>
-                        <li>What is dyamic memory allocation? Write a program to add to string using dynamic constructor
-                            concepts. </li>
-                        <li>Define virtual function with suitable example. </li>
+                        <li>Explain deadlock prevention process.</li>
+                        <li>What are the difference between paging and segmentation?</li>
+                        <li>What is thread? Explain different types of threads.</li>
+                        <li>Explain different file access mechanisms.</li>
+                        <li>What are the major features that differentiate Linux operating system from other operating
+                            systems?</li>
+                        <li>What is system call? Explain different types of system calls.</li>
+                        <!-- Group C -->
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
                         </b>
-                        <li>What are the limitation of procedure-oriented programming?mention the features of oops with
-                            example.
+                        <li>What are the two different views of operating system? Explain different architecture of
+                            operating system.</li>
+                        <li>Explain FCFS, shortest job next, shortest time remaining and round robins scheduling
+                            algorithms.
+                            Find the average wait time using FCFS, shortest job next and shortest time remaining
+                            algorithm for given data <br>
+                            <table class="table table-bordered">
+                                <tr>
+                                    <th>Process</th>
+                                    <th>Arrival time</th>
+                                    <th>Execute time</th>
+                                    <th>Service time</th>
+                                </tr>
+                                <tr>
+                                    <td>P0</td>
+                                    <td>0</td>
+                                    <td>5</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>P1</td>
+                                    <td>1</td>
+                                    <td>3</td>
+                                    <td>5</td>
+                                </tr>
+                                <tr>
+                                    <td>P2</td>
+                                    <td>2</td>
+                                    <td>8</td>
+                                    <td>8</td>
+                                </tr>
+                                <tr>
+                                    <td>P3</td>
+                                    <td>3</td>
+                                    <td>6</td>
+                                    <td>16</td>
+                                </tr>
+                            </table>
+                        <li>What are different page replacement algorithms? For the given reference string
+                            9,2,3,5,2,5,2,6,4,5,2,5,4,3,4 find non-programmed
+                            fault rate using different algorithms.
                         </li>
-                        <li>What are the rules of operator overloading? create a class called complex with data member
-                            real and imaginary. use necessary
-                            function and write a program to overload binary plus (+)to add two complex numbers and
-                            display result.
-                        </li>
-                        <li>Explain the need of inheritance in programming?write syntax and structure of single ,
-                            multiple and multilevel inheritance. illustrate virtual base class concepts with diagram and
-                            syntax only.
-                        </li>
-                        <li>Define construction? Explain the types of construction with example.
+                        <li>A 99 disk drive 100 cylinders, numbered 0 to 99. Disk requests come to the disk drives for
+                            cylinders 12, 26,24,4,42,8 and 50
+                            in that order. The driver is currently serving a request at cylinder 24. Find seek time for
+                            FCFS,SSTF,SCAN.
                         </li>
                     </ol>
                 </div>
@@ -144,8 +179,8 @@
                     <li><a href="../coa/2078.html">Computer Architecture</a></li>
                     <li><a href="">Discrete Structure</a></li>
                     <li><a href="../management/2078.html">Introduction To Management</a></li>
-                    <li><a href="#">Object Oriented Programming with C++</a></li>
-                    <li><a href="../os/2078.html">Operating System</a></li>
+                    <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
+                    <li><a href="#">Operating System</a></li>
                     <li><a href="../statI/2078.html">Statistics and Probability</a></li>
                 </ol>
             </div>
