--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>fwunoteshome</title>
 
   <!-- BootStrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -46,7 +46,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Management</a></li>
+              <li><a class="dropdown-item" href="bba.html">Management</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -142,12 +142,12 @@
       <div class="col-lg-3 shadow mt-3">
         <h4>Third Semester</h4>
         <ol>
-          <li><a href="">Computer Architecture</a></li>
+          <li><a href="csit/3sem/coa/2078.html">Computer Architecture</a></li>
           <li><a href="">Discrete Structure</a></li>
-          <li><a href="">Introduction To Management</a></li>
+          <li><a href="csit/3sem/management/2078.html">Introduction To Management</a></li>
           <li><a href="csit/3sem/c++/2078.html">Object Oriented Programming with C++</a></li>
-          <li><a href="">Operating System</a></li>
-          <li><a href="">Statistics and Probability</a></li>
+          <li><a href="csit/3sem/os/2078.html">Operating System</a></li>
+          <li><a href="csit/3sem/statI/2078.html">Statistics and Probability</a></li>
         </ol>
       </div>
     </div>
@@ -213,9 +213,9 @@
     </div>
 
     <!-- FAQ Section -->
-    <div class="row rounded" id="our-team-title">
+    <div class="row rounded" id="faq-section">
       <div class="col-12 text-center pt-4 pb-4  text-white">
-        <h1 id="about-us">FAQ'S</h1>
+        <h1>FAQ'S</h1>
       </div>
     </div>
 
