--- a/csit/3sem/management/2078.html
+++ b/csit/3sem/management/2078.html
@@ -71,13 +71,14 @@
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
                     <a href="#"><button type="button" class="btn paper-year-style">2078</button></a>
+                    <a href="2078sup.html"><button type="button" class="btn">2078Sup</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2078</p>
-                <p>Object oriented programming (CSIT.214)</p>
+                <p>Introduction to Management (CSIT.213)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,43 +98,38 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What is function overloading?</li>
-                        <li>Define data abstraction in oops.</li>
-                        <li>Define default argument with example.</li>
-                        <li>Which operators can not be overloading in C++?</li>
-                        <li>What is pure virtual function?</li>
-                        <li>What is namespace? Give an example.</li>
-                        <li>List any two differences between class and objects.</li>
-                        <li>what is container class?</li>
+                        <li>Define workforce diversity?</li>
+                        <li>What is scalar chain in management?</li>
+                        <li>Why is planning known as primary function of management?</li>
+                        <li>Mention any four charactersitic of decision making.</li>
+                        <li>Define delgation of authority?</li>
+                        <li>What is post-control system?</li>
+                        <li>What is non-programmed decision?</li>
+                        <li>what are the different skills required for managers?</li>
+                        <!-- Group B -->
                         <h5 class="text-center">Group B</h5>
-                        <b>
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
-                        </b>
-                        <li>What is inline function?Write a program to calculate cube of a number?. </li>
-                        <li>What is template? WAP to add two numbers using concepts of template..</li>
-                        <li>How do you convert one .class type to another class type? Write a c++ program to convert
-                            degree to radian using the concept of class yo -class type conversion.</li>
-                        <li>What is exception? Explain the mechanism of exception handling? </li>
-                        <li>What is dyamic memory allocation? Write a program to add to string using dynamic constructor
-                            concepts. </li>
-                        <li>Define virtual function with suitable example. </li>
+                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
+                        <li>Define management. Expalain the functions of management. (2+6)</li>
+                        <li>Describe the different types of roles that managers have to play in the organization.</li>
+                        <li>What is human resource management? What are the current issues in human resource management? (2+6)</li>
+                        <li>What is matrix organization? Expalain its merits and demerits. (5+3)</li>
+                        <li>What is supervision? What is the importance of supervision? (3+5)</li>
+                        <li>Define control. Explain the process of control. (3+5)</li>
+                        <!-- Group C -->
                         <h5 class="text-center">Group C</h5>
-                        <b>
-                            <p class="text-center">Attempt any three questions. (Long questions)</p>
-                        </b>
-                        <li>What are the limitation of procedure-oriented programming?mention the features of oops with
-                            example.
+                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
+                        <li>The success of the organization depends on proper formulation and implementation of planning. In the
+                            light of this statement, how are strategic plans formuated. Explain the instrument, which hepls managers to 
+                            implement planning. (8+4)
                         </li>
-                        <li>What are the rules of operator overloading? create a class called complex with data member
-                            real and imaginary. use necessary
-                            function and write a program to overload binary plus (+)to add two complex numbers and
-                            display result.
+                        <li>What role does leadership play in the performance of an organization? Describe the various
+                            approaches of leadership. (4+8)
                         </li>
-                        <li>Explain the need of inheritance in programming?write syntax and structure of single ,
-                            multiple and multilevel inheritance. illustrate virtual base class concepts with diagram and
-                            syntax only.
+                        <li>What is departmentalization? Explain the factors to considered while creating deparment in  an organization and 
+                            different types of departmentalization. (2+3+7)
                         </li>
-                        <li>Define construction? Explain the types of construction with example.
+                        <li>What do you mean by communication? Enumerate the types of communication and explain the basic steps in communication
+                            process. (2+5+5)
                         </li>
                     </ol>
                 </div>
@@ -141,12 +137,12 @@
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Third Semester</h4>
                 <ol>
-                    <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                    <li><a href="">Discrete Structure</a></li>
-                    <li><a href="../management/2078.html">Introduction To Management</a></li>
-                    <li><a href="#">Object Oriented Programming with C++</a></li>
-                    <li><a href="../os/2078.html">Operating System</a></li>
-                    <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
+                  <li><a href="">Discrete Structure</a></li>
+                  <li><a href="#">Introduction To Management</a></li>
+                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
+                  <li><a href="../os/2078.html">Operating System</a></li>
+                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
                 </ol>
             </div>
         </div>
