--- a/csit/3sem/ds/2078.html
+++ b/csit/3sem/ds/2078.html
@@ -70,15 +70,14 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2078</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>Discrete Structures (CSIT. 212)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -98,36 +97,57 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>What is Discrete Mathematics? Why it is used in computer science.</li>
+                        <li>What are Connectives? Give the name of connective used in discrete Mathematics?</li>
+                        <li>If A isa finite set with n elements, how many distinct relations that are symmetric and 
+                            antisymmetric over A are there?
+                        </li>
+                        <li>How many permutations of {a, b, c, d, e, f, g} starting with a?</li>
+                        <li>Construct the truth table for the compund proposition (p->q) -> (r->s).</li>
+                        <li>Distinguish between multigraph and pseudograph with suitable examples.</li>
+                        <li>Show that an undirected graph has an even number of vertices of odd degree.</li>
+                        <li>Suppose that a planar simple graph has 20 vertices, each of degree 3. Into how many region does 
+                            a representation of this planar graph split the plane?
+                        </li>
                         <h5 class="text-center">Group B</h5>
                         <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <li>Prove that 5<sup>n</sup>-1 is divisible by 4 using mathematical induction.</li>
+                        <li>Solve the recurrence relation a<sub>n</sub>=5a<sub>n-1</sub>-6a<sub>n-2</sub> with initial conditions 
+                            a<sub>0</sub>=1 and a<sub>1</sub>=2.
+                        </li>
+                        <li>Explain the method of proving theorems by direct, indirect, contradiction and by case with example.</li>
+                        <li>What is logical equivalence? Show that p->q and ~q->p are logically equivalent.</li>
+                        <li>What is minimum spanning tree? Explain Krushal's algorithm for finding minimum spanning tree.</li>
+                        <li>When does the two simple graphs G1= m(V1,E1) and G2(V2, E2) are isomorphic. Show that the graphs displayed in the
+                            following figure are isomorphic or not. <br>
+                            G1<img src="../../../images/ds14.png" alt="" class="img-fluid p-4">
+                            G2<img src="../../../images/ds141.png" alt=""class="img-fluid p-4">
+                        </li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
+                        <b> <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p></b>
+                        <li>Write the shortest path algorithm of Dijkstra for finding the shortest path between two vertices. What is 
+                            the length of shortest path between a and z in the weighted graph in the following figure? Apply the stated algorithm
+                            for finding the solution. <br>
+                            <img src="../../../images/ds15.png" alt="" class="img-fluid">
                         </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
+                        <li>What is Maximum Flow in Network? For the following network flow find the maximal flow from S to D. <br>
+                            <img src="../../../images/ds16.png" alt="" class="img-fluid">
                         </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <li>State pigeonhole principle. Solve the recurrence relation a<sub>n</sub>= 3a<sub>n-2</sub>+a<sub>n-3</sub>
+                            with initial conditions a<sub>0</sub>=1, a<sub>1</sub>=3, a<sub>2</sub>=7.
+                        </li>
+                        <li>(a) Construct truth tables to determine whether the given statement is a tautology a contingency or an absurdity.
+                            <ol type="i">
+                                 <li>p=>(q=>p)</li>
+                                 <li>q=>(q=>p)</li>
+                                 <li>p∧~p</li>
+                            </ol>
+                            (b) Let A = "Aldo is italian" and B = "Bob is English". Formalize the following sentences in proposition. <br>
+                            <ol>
+                                <li>Aldo isn't Italian</li>
+                                <li>If Aldo is Italian then Bob Bob is not English.</li>
+                                <li>Aldo is Italian and Bob is English, or neither Aldo is Italian nor Bob is English.</li>
+                            </ol>
                         </li>
                     </ol>
                 </div>
@@ -136,8 +156,8 @@
                 <h4>Third Semester</h4>
                 <ol>
                   <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
+                  <li><a href="#">Discrete Structure</a></li>
+                  <li><a href="../management/2078.html">Introduction To Management</a></li>
                   <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
                   <li><a href="../os/2078.html">Operating System</a></li>
                   <li><a href="../statI/2078.html">Statistics and Probability</a></li>
