--- a/csit/3sem/management/2078.html
+++ b/csit/3sem/management/2078.html
@@ -138,7 +138,7 @@
                 <h4>Third Semester</h4>
                 <ol>
                   <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="">Discrete Structure</a></li>
+                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
                   <li><a href="#">Introduction To Management</a></li>
                   <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
                   <li><a href="../os/2078.html">Operating System</a></li>
