--- a/csit/4sem/database/2073.html
+++ b/csit/4sem/database/2073.html
@@ -70,77 +70,83 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2073</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2073</p>
+                <p>Database Management System (CSIT.223)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fourth <br>
                     </div>
                     <div class="col-md-3 text-start">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.4hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>Define DBMS. What are the advantages of using DBMS over file system.</li>
+                        <li>What is transaction? What are the desirable properties of a transaction? Also explain states
+                            of
+                            transaction.</li>
+                        <li>Explain three level architecture of database with examples.</li>
+                        <li>Discuss the problem of deadlock and explain Wait-Die and Wound-Wait approaches to dealing
+                            deadlock problem. </li>
+                        <li>What is view in SQL? Explain how views are implemented with its advantages.</li>
+                        <li>What is concurrency control? Explain Timestamp-Ordering(TO) with example.</li>
+                        <li>What is serializable schedule? How can you test a schedule for conflict serializability?
+                        </li>
+                        <li>Write short notes on(any two):
+                            <ol type="a">
+                                <li>Shadow paging</li>
+                                <li>Physical and Logical data independence</li>
+                                <li>Primary and secondary indicies.</li>
+                            </ol>
+                        </li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
-                        <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
+                        <b>
+                            <p class="text-center">Attempt any two questions. (Short questions) (2x16=32)</p>
+                        </b>
+                        <li>What is normalization? Why it is needed? Explain 1NF,2NF and 3NF with examples.(2+2+12)
                         </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <li>Define data integrity. List out its importance. Explain domain and referential integrity
+                            constraints with examples.(1+3+9+3)</li>
+                        <li>a. Explain generalization and specialization with examples.(4+4)<br>
+                            b. Write SQL syntax and perform following tasks.(8)
+                            <ol type="i">
+                                <li>Create a table student(rollno,name,DOB,address)</li>
+                                <li>Insert some data into table.</li>
+                                <li>Add a new column say "marks" to table</li>
+                                <li>Describe the structure of table.</li>
+                            </ol>
                         </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fourth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../sad/2079.html">System Analysis and Design</a></li>
+                    <li><a href="">Numerical Methods</a></li>
+                    <li><a href="#">Database Management System</a></li>
+                    <li><a href="../satII/2079.html">Applied Statistics</a></li>
+                    <li><a href="../dcn/2079.html">Data Communication and Networks</a></li>
+                    <li><a href="">Theory Of Computation</a></li>
                 </ol>
             </div>
         </div>
