--- a/csit/4sem/database/2076.html
+++ b/csit/4sem/database/2076.html
@@ -70,77 +70,78 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="2073.html"><button type="button" class="btn ">2073</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2076</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2076</p>
+                <p>Database Management System (CSIT.223)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fourth <br>
                     </div>
                     <div class="col-md-3 text-start">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.4hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>What is join in DBMS? Explain outer join with example.</li>
+                        <li>Discuss the desirable properties of transaction. Explain state diagram of a transaction with
+                            example.</li>
+                        <li>Explain three level architecture of DBMS with example.</li>
+                        <li>What is concurrency control? Describe Timestamp ordering protocol in brief.</li>
+                        <li>What is database recovery? What happens at checkpoint? How is a database recovered using
+                            checkpoints?</li>
+                        <li>Illustrate the functional dependency with example.</li>
+                        <li>How is deadlock detected? Discuss deadlock avoidance scheme.</li>
+                        <li>Write short note (any two) <br>
+                            <ol type="a">
+                                <li>ER diagram</li>
+                                <li>Data Independence</li>
+                                <li>Triggers</li>
+                            </ol>
+                        </li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
-                        <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <b>
+                            <p class="text-center">Attempt any two questions. (Short questions) (2x16=32)</p>
+                        </b>
+                        <li> What is normalization? Why is it needed? How do you convert 2NF into 3NF and describe with example?</li>
+                        <li>What do you mean by integrity constraints? Mention its importance in DBMS and explain various types of integrity constraints with practical example in MySQL.</li>
+                        <li>Describe the following terms relating to DBMS. <br>
+                            <ol type="a">
+                                <li>Generalization</li>
+                                <li>DBA</li>
+                                <li>Weak entity sets</li>
+                                <li>Projection operation</li>
+                            </ol>
                         </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fourth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../sad/2079.html">System Analysis and Design</a></li>
+                    <li><a href="">Numerical Methods</a></li>
+                    <li><a href="#">Database Management System</a></li>
+                    <li><a href="../satII/2079.html">Applied Statistics</a></li>
+                    <li><a href="../dcn/2079.html">Data Communication and Networks</a></li>
+                    <li><a href="">Theory Of Computation</a></li>
                 </ol>
             </div>
         </div>
