--- a/csit/4sem/dcn/2079.html
+++ b/csit/4sem/dcn/2079.html
@@ -70,20 +70,19 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2079</p>
+                <p>Data Communication and Network (CSIT.222)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fourth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 100 <br>
@@ -98,49 +97,54 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>What is difference between half-duplex and full duolex?</li>
+                        <li> Write short notes on frequency and amplitude.</li>
+                        <li>what is connection oriented service?. </li>
+                        <li>
+                            What is diference between bandwidth and throughput?
+                        </li>
+                        <li> What are characteristics of TCP?</li>
+                        <li> Write short notes on CSMA/CD.</li>
+                        <li> Explain LLC layer in short.
+                        </li>
+                        <li> Whart are the services provide by physical layer.
+                        </li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li> Explain difference between synchronous and asynchronous transmission.
+                        </li>
+                        <li> Explain different rules for shorting IPV6 address; write in short notation the given IP
+                            8004:0001:3238:0008:0000:0000:FEFB.
+                        </li>
+                        <li> Explain packet switching technique.
+                        </li>
+                        <li> What are the different factors involved in transmission impairment.</li>
+                        <li> What are multiplexing? Explain difference between FDM and TDM.</li>
+                        <li> Explain Bulethooth architecture in short.</li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <b>
+                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                        </b>
+                        <li> What are different data encoding techniques used in digital data to analog signal and analog data to analog signal conversion?
+                            <li> What is IP header? Explain the term protocols, syntax and semantics.</li>
+                            <li> Write short notes on IP supporting protocols and find the subnet mask, no of subnets,network id, block size, broadcast id and no of hosts per network for the given IP address 177.40.60.50/20
+                                <li> Explain different error detection and correction method.</li>
+                            </li>
                         </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fourth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="">System Analysis and Design</a></li>
+                    <li><a href="">Numerical Methods</a></li>
+                    <li><a href="../database/2073.html">Database Management System</a></li>
+                    <li><a href="">Applied Statistics</a></li>
+                    <li><a href="#">Data Communication and Networks</a></li>
+                    <li><a href="">Theory Of Computation</a></li>
                 </ol>
             </div>
         </div>
