--- a/csit/4sem/sad/2079.html
+++ b/csit/4sem/sad/2079.html
@@ -70,20 +70,19 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2079</p>
+                <p>System Analysis and Design (CSIT.225)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fourth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 100 <br>
@@ -98,49 +97,52 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>What is system? Write characteristics of system.</li>
+                        <li>Define the term life cycle and methodology.</li>
+                        <li>Define feasibility. Explain operational feasibility.</li>
+                        <li>What is functional and non-functional requirement?</li>
+                        <li>What is relationship? Mention types of relationship in ER diagram.</li>
+                        <li>Why DFD is necessary in process modeling?</li>
+                        <li>Describe system implementation.</li>
+                        <li>Define unit testing and system testing.</li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>Describe the types of information system.</li>
+                        <li>What is System Analyst(SA)? Explain the function of System Analyst(SA).</li>
+                        <li>Discuss a Various types of stakeholders in system development.</li>
+                        <li>Explain capability maturity model(CMM).</li>
+                        <li>What is DFD? Describe DFD symbols with examples.</li>
+                        <li>Short notes on (any two) <br>
+                            <ol type="a">
+                                <li>CASE tools</li>
+                                <li>RAD</li>
+                                <li>Gantt Chart</li>
+                            </ol>
+                        </li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <b>
+                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                        </b>
+                        <li>Describe the underlying principles for system development.</li>
+                        <li>Expalin project management life cycle. Write various causes of project failure.</li>
+                        <li>What is requirement discovery? Describe any 3 requirement discovery tools.</li>
+                        <li>What is normalization? Why normalization is important? Explain
+                            1<sup>st</sup>, 2 <sup>nd</sup> and 3 <sup>rd</sup> normal form with examples.
                         </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fourth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="#">System Analysis and Design</a></li>
+                    <li><a href="">Numerical Methods</a></li>
+                    <li><a href="../database/2073.html">Database Management System</a></li>
+                    <li><a href="">Applied Statistics</a></li>
+                    <li><a href="../dcn/2079.html">Data Communication and Networks</a></li>
+                    <li><a href="">Theory Of Computation</a></li>
                 </ol>
             </div>
         </div>
