--- a/csit/5sem/cd/2079.html
+++ b/csit/5sem/cd/2079.html
@@ -70,20 +70,19 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2079</p>
+                <p>Compiler Design (CSIT.313)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 100 <br>
@@ -98,49 +97,67 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>What are the two parts of a compilation? Explain briefly.</li>
+                        <li>Write a regular expression for an identifier.</li>
+                        <li>What are the problems with top down parsing>?</li>
+                        <li>Define Lr(0) items of production A->XYZ.</li>
+                        <li>Draw the DAG for the statement a = (a*b+c)-(a*b+c).</li>
+                        <li>Give the main idea of dead code elimination and constant folding.</li>
+                        <li>What is a sential? What is its usage?</li>
+                        <li> Explain synthesized attribute and inherited attribute with suitable examples.</li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>Write the rule to eliminate left recursion in a grammar. Prepare and eliminate the left recursion for the grammar. 
+                            <br>
+                            S->Aa|b <br>
+                            A-> Ac|Sd|ϵ
+                        </li>
+                        <li>Point out why is buffering used in lexical analysis? What are the commonly used buffering methods?</li>
+                        <li>Calculate the first and follow functions for the given grammar <br>
+                            S->A <br>
+                            A->aB|Ad <br>
+                            B->b <br>
+                            C->g 
+                        </li>
+                        <li>What do you mean by three-address code representation? Explain with example.</li>
+                        <li>What is type checking? Discuss static and dynamic checking of types.</li>
+                        <li>Distingiush between synthesized & inherited attributes.</li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
-                        </li>
+                        <b>
+                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                        </b>
+                        <li>Explain in brief about different principle sources of optimization techniques with suitable examples.</li>
+                   <li>Write about the following in detail <br>
+                        <ol type="a">
+                            <li>Left factoring</li>
+                            <li>Dead code optimization</li>
+                            <li>Token and Pattern</li>
+                        </ol>
+                    </li>
+                    <li>a. Consider the following grammar <br>
+                        S->AS|b <br>
+                        A->SA|a <br>
+                        Construct the SLR parse table for the grammar. <br>
+                        b. Show the actions of the praser for the input string "abab".
+                    </li>
+                    <li>a. Write the quadruple, triple, indirect triple for the statement <br>
+                        a= b*-c+b*-c <br>
+                        b. Explain the role of intermediate code generator in compilation process.
+                    </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fifth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
+                    <li><a href="#">Compiler Design</a></li>
+                    <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
+                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
