--- a/csit/5sem/daa/2075.html
+++ b/csit/5sem/daa/2075.html
@@ -70,77 +70,90 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
+                    <a href="#"><button type="button" class="btn  paper-year-style">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn ">2076</button></a>
                     <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2075</p>
+                <p>Analysis of Algorithm and Design (CSIT.311)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-start">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.4hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
-                        <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <li>Define algorithm and RAM model. Explain the properties of an algorithm.</li>
+                        <li>What is asymptotic notation? Write down the formal definition of big-oh, big-omega and
+                            big-theta notation with example.</li>
+                        <li>Define master method for recurrence relation. Solve following recurrence relation using
+                            master method. <br>
+                            a) T(n) = 3T(n/2) + n <br> b) T(n) = 2T(n/4) + &#8730; n;
+                        </li>
+                        <li>Write down the binary search algorithm. Trace the binary search algorithm on the basis of
+                            following data <br>
+                            a[] = {2, 5, 7, 9, 18, 45, 53, 59, 67, 72, 88, 95, 101, 104} search keys are 103 and 67.
+                        </li>
+                        <li>What is divide and conquer algorithm? Using this technique. Write algorithm of quick sort
+                            then analyze it.</li>
+                        <li>Define graph. Explain different types of graph representation with example.</li>
+                        <li>Give the job sequencing algorithm with deadlines. You have given 5 jobs with profit pi and
+                            deadline di as <br>
+                            job i = {1, 2, 3, 4, 5} <br>
+                            pi = {20, 10, 5, 15, 1} <br>
+                            di = {2, 1, 3, 2, 3} <br>
+                            Find the potimal job lists that can be executed in sequence within their deadlines so as to
+                            maximize the profits.
+                        </li>
+                        <li>Consider 5 items along their respective weights and values <br>
+                            I = {I<sub>1</sub>, I<sub>2</sub>, I<sub>3</sub>, I<sub>4</sub>, I<sub>5</sub>} <br>
+                            W = {5, 10, 20, 30, 40} <br>
+                            V = {30, 20, 100, 90, 160} <br>
+                            The capacity of knapsack W = 60. Find the solution to the fractional knapsack problem.
+                        </li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
-                        </li>
+                        <b>
+                            <p class="text-center">Attempt any two questions. (Short questions) (2x16=32)</p>
+                        </b>
+                        <li> Write a dynamic program for matrix chain multiplication problem. Your are give the following matrices with their sizes:
+                            A1 (10x20), A2 (20x15), A3 (15x30), A4(30x5) using dynamic programming fully parenthesize the product A1, A2, A3, A4
+                            such that the number of scalar multiplications are minimum.
+                       </li>
+                       <li>Explain heap sort algorithm. Sort following data using heap sort <br>
+                           A[] = {10, 12, 53, 34, 23, 77, 50, 66, 66, 5, 8}.
+                       </li>
+                       <li>Solve the all pair shortest path problem for the following graph using Flyod's Warshall algorithm <br>
+                           <img src="../../../images/graph10.png" alt="" class="img-fluid">
+                       </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fifth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="#">Data Analysis and Algorithms</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
+                    <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
+                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
