--- a/csit/5sem/daa/2076.html
+++ b/csit/5sem/daa/2076.html
@@ -70,77 +70,112 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2076</button></a>
                     <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2076</p>
+                <p>Analysis of Algorithm and Design (CSIT.311)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-start">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.4hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
-                        <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <li>Define asymptotic notation. Explain big oh, big theta and big omega notation with example.</li>
+                    <li>Solve following recurrence relation by using iteration method <br>
+                        T(n) = 2T(n/2) + 1 when n > 1 <br>
+                        T(n) = 1 when n = 1
+                    </li>
+                    <li>Write down quick sort algorithm. Trace the following array using quick sort algorithm <br>
+                        5, 3, 2, 6, 4, 1, 3, 7
+                    </li>
+                    <li>Explain min-max finding algorithm with example.</li>
+                    <li>Define dynamic programming. Find maximum profit using 0/1 knapsack on 7 items where v[] = {2, 3,
+                        34, 4, 5, 7} and
+                        w[] = {3, 5, 7, 43, 9, 2}, W = 9.
+                    </li>
+                    <li>Define graph. Explain the types of graph with example.</li>
+                    <li>Write down BFS algorithm. Find BFS tree on the basis of following graph <br>
+                        <img src="../../../images/graph.png" alt="" class="img-fluid">
+                    </li>
+                    <li>Define class P, class NP and class NP completenss. Explain vertex cover problem with example.
+                    </li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
+                        <b>
+                            <p class="text-center">Attempt any two questions. (Short questions) (2x16=32)</p>
+                        </b>
+                        <li>Define greedy algorithm. Write down Huff man coding algorithm and find the compressed data using
+                            Huffman coding with set of symbols and their frequencies on basis of following data
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>Symbol</th>
+                                        <th>Frequency</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>A</td>
+                                        <td>24</td>
+                                    </tr>
+                                    <tr>
+                                        <td>B</td>
+                                        <td>12</td>
+                                    </tr>
+                                    <tr>
+                                        <td>C</td>
+                                        <td>10</td>
+                                    </tr>
+                                    <tr>
+                                        <td>D</td>
+                                        <td>8</td>
+                                    </tr>
+                                    <tr>
+                                        <td>E</td>
+                                        <td>8</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
+                        <li>Explain Floyd Warshall's algorithm. Find all pair shortest path problem on the following graph
+                            using Floyd Warshall's algorithm <br>
+                           <img src="../../../images/graph10.png" alt="" class="img-fluid">
                         </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <li>Write down merge sort algoritym. Sort following data using merge sort algorithm and also find
+                            out its complexity. <br>
+                            4, 7, 2, 6, 1, 4, 7, 3, 5, 2, 6
                         </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fifth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="#">Data Analysis and Algorithms</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
+                    <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
+                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
