--- a/csit/5sem/daa/2078.html
+++ b/csit/5sem/daa/2078.html
@@ -70,20 +70,22 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2078</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>Analysis of Algorithm and Design (CSIT.311)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 100 <br>
@@ -98,49 +100,59 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>Define algorithm. Write down the characteristics of algorithm.</li>
+                        <li>How do you calculate running time of an algorithm?</li>
+                        <li>Define the best, worst and average case complexity.</li>
+                        <li>In which case is recursion tree method useful? Define master methode.</li>
+                        <li>Write down bubble sort algorithm and write down its complexity.</li>
+                        <li>Write down Kruskal's algorithm for minimum spanning tree.</li>
+                        <li>What is class P and class NP problem?</li>
+                        <li>Differentiate between dynamic programming and greedy algorithm.</li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>Solve the following recurrence relation using recursion tree method <br>
+                            T(n) = 2T(n/2) + n <sup>2</sup>
+                        </li>
+                        <li>Define heap sort. Write down heapify algorithm. Create a heap A[] = {10, 12, 53, 34, 23, 77, 59,
+                            66, 5, 8}</li>
+                        <li>Explain sequential search and binary search algorithm with complexity.</li>
+                        <li>Sort the given data using quick sort algorithm A[] = {16, 7, 6, 15, 14, 18, 25, 55, 32, 45, 37}
+                        </li>
+                        <li>Explain BFS and DFS algorithm with example.</li>
+                        <li>Define prime number, composite number, GCD and Euclid algorithm. Compute gcd of 99 and 78 using
+                            Euclid algorithm.</li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
+                        <b>
+                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36</p>
+                        </b>
+                        <li>Explain 0/1 knapsack problem with algorithm. Find the maximum profit earned on the basis of
+                            given data <br>
+                            "let the problem instance be with 7 items where v[] = {2, 3, 3, 4, 4, 5, 7} and w[] = {3, 5, 7,
+                            4, 3, 9, 2}".
                         </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
+                        <li>Explain Floyd's Warshall algorithm. Compute all pair shortestpath using following graph <br>
+                           <img src="../../../images/graph10.png" alt="" class="img-fluid">
                         </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <li>Write down matrix chain multiplication algorithm. Take A <sub>1</sub> (20x15), A <sub>2</sub>
+                            (15x30), A <sub>3
+                            </sub>(30x5), A <sub>4</sub>(5x25) matrices. <br> Compute m[i, j] and s[i, j] table.
                         </li>
+                        <li>Define graph. Explain adjacency list, adjacency matrix and incidence matrix with suitable
+                            example.</li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fifth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="#">Data Analysis and Algorithms</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
+                    <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
+                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
