--- a/csit/5sem/daa/2079.html
+++ b/csit/5sem/daa/2079.html
@@ -70,20 +70,22 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
                     <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2079</p>
+                <p>Analysis of Algorithm and Design (CSIT.311)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 100 <br>
@@ -98,49 +100,68 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>Define algorithm. Write down the properties of algorithm.</li>
+                        <li>What is best, worst and average case analysis?</li>
+                        <li>Let f(n)=5n<sup>2</sup>+3n+8 and g(n)=n<sup>2</sup>, then prove that f(n) = &#x3B8;(g(n))
+                        </li>
+                        <li>Solve the following recurrence relation by using master's method T(n)=2T(n/4)+&#x221A;n</li>
+                        <li>Write down the bubble sort algorithm.</li>
+                        <li>Write down binary search algorithm and analyze its complexity.</li>
+                        <li>Differentiate between dynamic programming and greedy algorithm.</li>
+                        <li>Define decision problem and optimizatioin problem with example.</li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>Write an algorithm for quick sort and trace the algorithm for following array 
+
+                            A[]={16,7,15,14,18,25,55,32}
+                        </li>
+                        <li>Write down Huffman code algorithm. You have given a message text having six distinct characters {p,q,r,s,t,u} with frequncy {45,16,13,12,9,5}. Trace the Huffman algorithm to build tree and obtain the optimal prefix code for each character.
+                        </li>
+                        <li>Explain the prim's algorithm for computing MST of a given graph. Find 
+                            minimum spanning tree of following graph. <br>
+                           <img src="../../../images/2079AAD11.png" alt="" class="img-fluid">
+                        </li>
+                        <li>What is heapify property? Write down heapify algorithm with example.</li>
+                        <li>Write an algorithm for depth first search. Use depth first seach to find a 
+                            spanning tree of following graph. <br>
+                            <img src="../../../images/2079AAD13.png" alt="" class="img-fluid">
+                        </li>
+                        <li>Define graph. Explain directed and undirected graph with example.</li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
-                        </li>
+                        <b>
+                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36</p>
+                        </b>
+                        <li>Define substitution method. Solve following recurrence relation using substitution method <br>
+                            T(n) = 1 , if n = 1 <br>
+                            T(n) = 4T(n/2)+n, if n > 1
+                            </li>
+                            <li> Explain and analyze the Floyd's warshall algorithm for all pair shortest path
+                                problem. Trace the algorithm for following graph.
+                                <img src="../../../images/2079AAD16.png" alt="" class="img-fluid">
+                            </li>
+                            <li>Write down matrix chain multiplicatoin algorithm. Trace the algorithm for 
+                                matrix chain multiplicatoin for given chanin ABCD with array {5,2,3,5,4}.
+                            </li>
+                            <li>Define the term prime number, composite number and Euclid's GCD algorithm
+                                . State Chinese Remainder theorem. Find all solutions to the equations. <br>
+                                X ≡ 1(mod 5) <br>
+                                X ≡ 1(mod 7) <br>
+                                X ≡ 3(mod 11) using Chinese Remainder theorem.
+                            </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fifth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="#">Data Analysis and Algorithms</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
+                    <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
+                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
