--- a/csit/5sem/sam/2079.html
+++ b/csit/5sem/sam/2079.html
@@ -70,20 +70,19 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2079</p>
+                <p>System Simulation and Modeling (CSIT.314)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 100 <br>
@@ -98,49 +97,56 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>What are advantages of using simulation and modeling for data analysis?</li>
+                        <li>Give one example of real world applicatoin where simulation and modeling have been used
+                            successfully.</li>
+                        <li>What are some common types of model that can be used with simulatio technique.</li>
+                        <li>Wha is hybrid model?</li>
+                        <li>Explain system environment with examples.</li>
+                        <li>Define random number with its characteristics.</li>
+                        <li>What is p-values?</li>
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>Define system simulation. Describe various components of system with examples.</li>
+                        <li>What is queuing system? Explain characteristics of queuing system.</li>
+                        <li>Wha is GPSS? Represent the manufacturing shop by using GPSS block in which a maching tool is
+                            turing out parts at the rate of one every 5 minitues to examine each one and reject about
+                            10% of the parts. Each part will be represented by one transaction and the time unit
+                            selected for the problem will be 1 minute.</li>
+                        <li>What is input modeling? Describe the steps used in development of model.</li>
+                        <li>Define true random numbers and pseudo numbers with its properties. The sequence of numbers
+                            0.64, 0.50, 0.25, 0.58, 0.72, 0.90 has been generated. Use KS Test with D
+                            <sub>&#x0251;</sub>= 0.050 => 0.512 ti determine if the hypothesis that they are uniformly
+                            distributed on interval [0,1] can be rejected.</li>
+                        <li>What is data collectioin? Write suggestion that help in data collection.</li>
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
+                        <b>
+                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
+                        </b>
+                        <li>Explain steps used in simulation study with diagram.</li>
+                        <li>What do you mean by pseudo random numbers? Explain Gap test algorithm with examples.</li>
+                        <li>What is calibration and validation model? Describe three steps for validation of simulation model.</li>
+                        <li>What is frequency test? Given below the sequence of 100 random numbers. Use chi-square test with &#x0251; = 0.05 to check the number for uniform distribution and serial auto correlation. <br>
+                            09,30,66,21,63,98,35,05,65,30,85,66,45,42,92,43,91,96,20,30,
+                            11,15,35,65,28,60,09,29,10,60,24,90,70,60,90,56,99,35,23,24,
+                            23,40,70,94,58,14,15,55,18,85,71,55,84,63,8,40,30,18,27,45,
+                            76,07,43,07,20,47,13,78,87,92,77,47,14,49,39,87,35,42,80,10,
+                            49,64,25,30,05,72,99,53,72,57,72,56,40,22,44,70,56,15,36,76
                         </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Fifth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
+                    <li><a href="#">Simulation and Modeling</a></li>
+                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
