--- a/csit/6sem/crypto/2079.html
+++ b/csit/6sem/crypto/2079.html
@@ -70,20 +70,19 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn paper-year-style">2078S</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2078</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2078</p>
-                <p>Introduction to Management (Supplementary) (CSIT.213)</p>
+                <p>End-Term Examination-2079</p>
+                <p> Introduction to Cryptography (CSIT.321)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Third <br>
+                        <b>Semester:</b> Sixth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 100 <br>
@@ -98,49 +97,47 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why organization are established? Justify your answer.</li>
-                        <li>State features of management.</li>
-                        <li>Why planning is known as primary function of management?</li>
-                        <li>Define human resource management.</li>
-                        <li>State the functions of top-level management.</li>
-                        <li>Define social responsibility.</li>
-                        <li>What is SWOT analysis?</li>
-                        <li>Define the term 'Unity of Command'.</li>
-                        <!-- Group B -->
+                        <li>What is the number of padding bits if the length of the original message is 2500 bits and 3005 bits in case SHA-512?</li>
+                        <li> Explain different services provides by SSL.</li>
+                        <li>How can you check integrity of a message?</li>
+                        <li>What is the purpose of the S-boxes in DES?</li>
+                        <li>Explain fermats and Euler theorem with suitable examples.</li>
+                        <li>What are the objectives of modern cryptography?</li>
+                        <li>Explain security attack.</li>
+                        <li>Explain Elliptic curve cryptography.</li>
+
                         <h5 class="text-center">Group B</h5>
-                        <b> <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p></b>
-                        <li>What do you mean by function organization structure? Explain its advantages and disadvantages. (5+3)</li>
-                        <li>What are the different skills required for manages? Explain them in terms of management levels.</li>
-                        <li>What is staffing? Explain the components of staffing.(2+6)</li>
-                        <li>Define management. Explain the cahnging perspectives of organization. (2+6)</li>
-                        <li>What is decision making? Differentiate between the programmed and non-programmed managerial decision. (3+5)</li>
-                        <li>What is planning? Explain the importance of planning. (3+5)</li>
-                        <!-- Group C -->
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>Differntiate between block cipher and stream cipher. Encrypt the message "MEET  ME IN THE CLASS" using Rail fence cipher using depth 2 and also decrypt the  encrytped message.</li>
+                        <li>Encrypt the message "ALLCE" and "BoB" to playfair cipher using key  "PLAYAIRENCRYPTION".</li>
+                        <li>In a RSA system, a user has chosen the primes 11 and 17 to create a key pair. The public key is (7,n) and the private key is (d,n). Decide the private key (d,n). Show encrytion and decryption process for the message 88.</li>
+                        <li>Explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
+                        <li>What is kerberos?Explain different servers of kerberos scheme.</li>
+                        <li>Define cryptographic hash function. Explain SHA-512 algorithm with block diagram</li>
+                
                         <h5 class="text-center">Group C</h5>
-                        <b> <p class="text-center">Attempt any three questions. (Long questions)</p></b>
-                        <li>Control is the process of monitoring activities to ensure that they are being accomplished as planned advantages
-                            correcting any significant deviation. In the light of this statement discuss the process and problems of a control
-                            system. (6+6)
-                        </li>
-                        <li>What is leadership? Explain the function and approaches of leadershipls with examples. (2+4+6)</li>
-                        <li>Departments of an orgination may be formed on different basis. By keeping this point in view, explain
-                            the different types of departmentalization. Also explain the concept of delegation of authority. (8+4)
-                        </li>
-                        <li>Define communication. Explain different types of communication used in organization. Discuss different
-                            barriers to the effective communication. (2+5+5)
-                        </li>
+                        <b>
+                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                        </b>
+                        <li>Define primitive root of a prime number with suitable  example. Given the prime number q=19, the primitive root &#x0251;=2, private key of sender with   X<sub>A</sub>=3 and random integer t=5, encrypt the message M=16 using Elgamal encryption algorithm.</li>
+                        <li>Compare the SHA parameters between SHA-160,SHA-256, SHA-384 and SHA-512. Encrypt the cipher text "HATS" with the key <img src="../../../images/crypto16.png" alt="" class="img-fluid">using Hill cipher and also decrypt it.</li>
+                        <li>Define double and triple DES. Explain DES encryption algorithm with its block diagram.</li>
+                        <li>Write down the features of AES. Explain the procedure of mix column transformation in AES with an example.</li>
+                     
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Third Semester</h4>
+                <h4>Sixth Semester</h4>
                 <ol>
-                  <li><a href="../coa/2078.html">Computer Architecture</a></li>
-                  <li><a href="../ds/2078.html">Discrete Structure</a></li>
-                  <li><a href="#">Introduction To Management</a></li>
-                  <li><a href="../c++/2078.html">Object Oriented Programming with C++</a></li>
-                  <li><a href="../os/2078.html">Operating System</a></li>
-                  <li><a href="../statI/2078.html">Statistics and Probability</a></li>
+                    <li><a href="">Introduction to Cryptography</a></li>
+                    <li><a href="">Java Progamming I</a></li>
+                    <li><a href="">Research Methodology for CS</a></li>
+                    <li><a href="">Software Engineering</a></li>
+                    <li><a href="" href="">Web Tech II</a></li>
+                    <li><a href="" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
