--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <h4>Third Semester</h4>
         <ol>
           <li><a href="csit/3sem/coa/2078.html">Computer Architecture</a></li>
-          <li><a href="">Discrete Structure</a></li>
+          <li><a href="csit/3sem/ds/2078.html">Discrete Structure</a></li>
           <li><a href="csit/3sem/management/2078.html">Introduction To Management</a></li>
           <li><a href="csit/3sem/c++/2078.html">Object Oriented Programming with C++</a></li>
           <li><a href="csit/3sem/os/2078.html">Operating System</a></li>
@@ -156,23 +156,23 @@
       <div class="col-lg-3 shadow mt-3">
         <h4>Fourth Semester</h4>
         <ol>
-          <li><a href="">System Analysis and Design</a></li>
+          <li><a href="csit/4sem/sad/2079.html">System Analysis and Design</a></li>
           <li><a href="">Numerical Methods</a></li>
-          <li><a href="">Database Management System</a></li>
-          <li><a href="">Applied Statistics</a></li>
-          <li><a href="">Data Communication and Networks</a></li>
+          <li><a href="csit/4sem/database/2073.html">Database Management System</a></li>
+          <li><a href="csit/4sem/satII/2079.html">Applied Statistics</a></li>
+          <li><a href="csit/4sem/dcn/2079.html">Data Communication and Networks</a></li>
           <li><a href="">Theory Of Computation</a></li>
         </ol>
       </div>
       <div class="col-lg-3 shadow mt-3">
         <h4>Fifth Semester</h4>
         <ol>
-          <li><a href="">Computer Graphics</a></li>
-          <li><a href="">Data Analysis and Algorithms</a></li>
-          <li><a href="">Compiler Design</a></li>
-          <li><a href="">Simulation and Modeling</a></li>
-          <li><a href="">Artificial Intelligence</a></li>
-          <li><a href="">Web Technology I</a></li>
+          <li><a href="csit/5sem/cg/2079.html">Computer Graphics</a></li>
+          <li><a href="csit/5sem/daa/2075.html">Data Analysis and Algorithms</a></li>
+          <li><a href="csit/5sem/cd/2079.html">Compiler Design</a></li>
+          <li><a href="csit/5sem/sam/2079.html">Simulation and Modeling</a></li>
+          <li><a href="csit/5sem/ai/2079.html">Artificial Intelligence</a></li>
+          <li><a href="csit/5sem/web/2079.html">Web Technology I</a></li>
         </ol>
       </div>
       <div class="col-lg-3 shadow mt-3">
