--- a/csit/4sem/database/2079.html
+++ b/csit/4sem/database/2079.html
@@ -69,12 +69,13 @@
         <div class="row justify-content-center">
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
-                <div class="col-8">
+                <div class="col-lg-8">
                     <a href="2073.html"><button type="button" class="btn ">2073</button></a>
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
                     <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
+                <div class="col-lg-4"></div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
@@ -87,7 +88,7 @@
                         <b>Level:</b> Undergraduate <br>
                         <b>Semester:</b> Fourth <br>
                     </div>
-                    <div class="col-md-3 text-start">
+                    <div class="col-md-3 text-end">
                         <b>Full Marks:</b> 100 <br>
                         <b>Time:</b> 3hrs
                     </div>
@@ -112,28 +113,33 @@
                         <b>
                             <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
                         </b>
-                        <li>What is relational algebra? Explain select and project operations with proper syntax and example.</li>
+                        <li>What is relational algebra? Explain select and project operations with proper syntax and
+                            example.</li>
                         <li>Explain three schema architecture of DBMS in bried.</li>
                         <li> Describe type of functional dependencies with example.</li>
                         <li>Discuss the concept of generalization and specialization with example.</li>
-                        <li>What is ER diagram? Construct ER diagram to show the relationship between <b>Player</b> and <b>Game</b>entities.</li>
+                        <li>What is ER diagram? Construct ER diagram to show the relationship between <b>Player</b> and
+                            <b>Game</b>entities.</li>
                         <li>Write short notes on (any two)
                             <ol type="a">
                                 <li>Two phase locking</li>
                                 <li>Shadow paging</li>
                                 <li>DBA</li>
                             </ol>
-                        <h5 class="text-center">Group C</h5>
-                        <b>
-                            <p class="text-center">Attempt any three questions. (Long questions)</p>
-                        </b>
-                        <li>What do you mean by concurrency control? Explain time stamp order protocol with example.</li>
+                            <h5 class="text-center">Group C</h5>
+                            <b>
+                                <p class="text-center">Attempt any three questions. (Long questions)</p>
+                            </b>
+                        <li>What do you mean by concurrency control? Explain time stamp order protocol with example.
+                        </li>
                         <li>What is normalization? Explain 3NF and BCNF with example.</li>
                         <li>How domain integrity and referentail integrity constraints can be implemented in database?
                             Also mention importance of data integrity.
                         </li>
-                        <li>Write SQL statements to contruct following tables and establish referentail integrity (foreign key)
-                            between tables. Also add one more column to the both tables (say age in Author and Publisher in Writes)
+                        <li>Write SQL statements to contruct following tables and establish referentail integrity
+                            (foreign key)
+                            between tables. Also add one more column to the both tables (say age in Author and Publisher
+                            in Writes)
                             <br>Author (Aid, name, gender, address) <br>
                             Writes (Aid, Book_id, Title, ISBN).
                         </li>
