--- a/csit/6sem/crypto/2079.html
+++ b/csit/6sem/crypto/2079.html
@@ -69,7 +69,7 @@
         <div class="row justify-content-center">
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
-                <div class="col-8">
+                <div class="col-lg-8">
                     <a href="#"><button type="button" class="btn paper-year-style">2078</button></a>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                         <b>Level:</b> Undergraduate <br>
                         <b>Semester:</b> Sixth <br>
                     </div>
-                    <div class="col-md-3 text-start">
+                    <div class="col-md-3 text-end">
                         <b>Full Marks:</b> 100 <br>
                         <b>Time:</b> 3hrs
                     </div>
@@ -97,7 +97,8 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What is the number of padding bits if the length of the original message is 2500 bits and 3005 bits in case SHA-512?</li>
+                        <li>What is the number of padding bits if the length of the original message is 2500 bits and
+                            3005 bits in case SHA-512?</li>
                         <li> Explain different services provides by SSL.</li>
                         <li>How can you check integrity of a message?</li>
                         <li>What is the purpose of the S-boxes in DES?</li>
@@ -110,34 +111,42 @@
                         <b>
                             <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
                         </b>
-                        <li>Differntiate between block cipher and stream cipher. Encrypt the message "MEET  ME IN THE CLASS" using Rail fence cipher using depth 2 and also decrypt the  encrytped message.</li>
-                        <li>Encrypt the message "ALLCE" and "BoB" to playfair cipher using key  "PLAYAIRENCRYPTION".</li>
-                        <li>In a RSA system, a user has chosen the primes 11 and 17 to create a key pair. The public key is (7,n) and the private key is (d,n). Decide the private key (d,n). Show encrytion and decryption process for the message 88.</li>
+                        <li>Differntiate between block cipher and stream cipher. Encrypt the message "MEET ME IN THE
+                            CLASS" using Rail fence cipher using depth 2 and also decrypt the encrytped message.</li>
+                        <li>Encrypt the message "ALLCE" and "BoB" to playfair cipher using key "PLAYAIRENCRYPTION".</li>
+                        <li>In a RSA system, a user has chosen the primes 11 and 17 to create a key pair. The public key
+                            is (7,n) and the private key is (d,n). Decide the private key (d,n). Show encrytion and
+                            decryption process for the message 88.</li>
                         <li>Explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
                         <li>What is kerberos?Explain different servers of kerberos scheme.</li>
                         <li>Define cryptographic hash function. Explain SHA-512 algorithm with block diagram</li>
-                
+
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any three questions. (Long questions)</p>
                         </b>
-                        <li>Define primitive root of a prime number with suitable  example. Given the prime number q=19, the primitive root &#x0251;=2, private key of sender with   X<sub>A</sub>=3 and random integer t=5, encrypt the message M=16 using Elgamal encryption algorithm.</li>
-                        <li>Compare the SHA parameters between SHA-160,SHA-256, SHA-384 and SHA-512. Encrypt the cipher text "HATS" with the key <img src="../../../images/crypto16.png" alt="" class="img-fluid">using Hill cipher and also decrypt it.</li>
+                        <li>Define primitive root of a prime number with suitable example. Given the prime number q=19,
+                            the primitive root &#x0251;=2, private key of sender with X<sub>A</sub>=3 and random integer
+                            t=5, encrypt the message M=16 using Elgamal encryption algorithm.</li>
+                        <li>Compare the SHA parameters between SHA-160,SHA-256, SHA-384 and SHA-512. Encrypt the cipher
+                            text "HATS" with the key <img src="../../../images/crypto16.png" alt=""
+                                class="img-fluid">using Hill cipher and also decrypt it.</li>
                         <li>Define double and triple DES. Explain DES encryption algorithm with its block diagram.</li>
-                        <li>Write down the features of AES. Explain the procedure of mix column transformation in AES with an example.</li>
-                     
+                        <li>Write down the features of AES. Explain the procedure of mix column transformation in AES
+                            with an example.</li>
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="">Introduction to Cryptography</a></li>
+                    <li><a href="#">Introduction to Cryptography</a></li>
                     <li><a href="">Java Progamming I</a></li>
                     <li><a href="">Research Methodology for CS</a></li>
                     <li><a href="">Software Engineering</a></li>
-                    <li><a href="" href="">Web Tech II</a></li>
-                    <li><a href="" href="">Minor Project I</a></li>
+                    <li><a href="">Web Tech II</a></li>
+                    <li><a href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
