--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="col-lg-3 shadow mt-3">
         <h4>Sixth Semester</h4>
         <ol>
-          <li><a href="">Introduction to Cryptography</a></li>
+          <li><a href="csit/6sem/crypto/2079.html">Introduction to Cryptography</a></li>
           <li><a href="">Java Progamming I</a></li>
           <li><a href="">Research Methodology for CS</a></li>
           <li><a href="">Software Engineering</a></li>
