--- a/csit/3sem/management/2078sup.html
+++ b/csit/3sem/management/2078sup.html
@@ -85,7 +85,7 @@
                         <b>Level:</b> Undergraduate <br>
                         <b>Semester:</b> Third <br>
                     </div>
-                    <div class="col-md-3 text-start">
+                    <div class="col-md-3 text-end">
                         <b>Full Marks:</b> 100 <br>
                         <b>Time:</b> 3hrs
                     </div>
