--- a/csit/4sem/database/2076.html
+++ b/csit/4sem/database/2076.html
@@ -87,7 +87,7 @@
                         <b>Level:</b> Undergraduate <br>
                         <b>Semester:</b> Fourth <br>
                     </div>
-                    <div class="col-md-3 text-start">
+                    <div class="col-md-3 text-end">
                         <b>Full Marks:</b> 80 <br>
                         <b>Time:</b> 2.4hrs
                     </div>
