--- a/csit/4sem/satII/2079.html
+++ b/csit/4sem/satII/2079.html
@@ -84,7 +84,7 @@
                         <b>Level:</b> Undergraduate <br>
                         <b>Semester:</b> Fourth <br>
                     </div>
-                    <div class="col-md-3 text-start">
+                    <div class="col-md-3 text-end">
                         <b>Full Marks:</b> 100 <br>
                         <b>Time:</b> 3hrs
                     </div>
