--- a/csit/6sem/crypto/2079.html
+++ b/csit/6sem/crypto/2079.html
@@ -70,7 +70,10 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-lg-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2078</button></a>
+                    <a href="#"><button type="button" class="btn ">2074</button></a>
+                    <a href="2075.html"><button type="button" class="btn ">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn ">2076</button></a>
+                    <a href="2079.html"><button type="button" class="btn paper-year-style">2079</button></a>
                 </div>
             </div>
 
@@ -123,7 +126,7 @@
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
                         </b>
                         <li>Define primitive root of a prime number with suitable example. Given the prime number q=19,
                             the primitive root &#x0251;=2, private key of sender with X<sub>A</sub>=3 and random integer
