--- a/csit/5sem/web/2076.html
+++ b/csit/5sem/web/2076.html
@@ -73,15 +73,15 @@
                     <a href="2073.html"><button type="button" class="btn">2073</button></a>
                     <a href="2074.html"><button type="button" class="btn ">2074</button></a>
                     <a href="2075.html"><button type="button " class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style ">2076</button></a>
                     <a href="2078.html"><button type="button" class="btn ">2078</button></a>
-                    <a href="#"><button type="button " class="btn   paper-year-style ">2079</button></a>
+                    <a href="2079.html"><button type="button " class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
+                <p>End-Term Examination-2076</p>
                 <p>Web Technology I (CSIT.316)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
@@ -90,48 +90,40 @@
                         <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-end">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.40hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=24)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>why is XML namesspace significance?</li>
-                        <li>How many types of heading does an HTML contain?</li>
-                        <li>What is RWD (Responsive Web Page Design)?</li>
-                        <li>What is the Box Model in CSS?</li>
-                        <li>What is DOM? What is the use of document object?</li>
-                        <li>How to create objects in JavaScript?</li>
-                        <li>What is a well formed XML document?</li>
-                        <li>Define web server.</li>
-                        <h5 class="text-center">Group B</h5>
-                        <b>
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
-                        </b>
-                        <li>How do you use external CSS file in the webpage?</li>
-                        <li>Describe HTTP with its header fields and functions.</li>
-                        <li>Write javascript code to valide mobile number and email address.</li>
-                        <li>Differentiate between DTD and XML schema. Also mention the features of XML.</li>
-                        <li>What is HTML link? Explain different link used in html.</li>
-                        <li>Explain ordered and unorderd list in HTML with its significance.</li>
+                        <li>Writ a program using javascript to enter the two numbers and display the sum of numbers.</li>
+                        <li>Define HTML. Explain html frames with example.</li>
+                        <li>What is hyperlink? Explain its types with example.</li>
+                        <li>Discuss the importance of Internet and also mention positive and negative impacts of social media.</li>
+                        <li>What is pattern matching? Describe the meta charactes (\d\D\w\W\s\S).</li>
+                        <li>What is exception handing? Explain the term try, catch and finally with example.</li>
+                        <li>Describe all Indicators and occurrence indicators in XML with example.</li>
+                        <LI>Write short notes on: (any two) <br>
+                            <ol type="a">
+                                <li>List tag in html</li>
+                                <li>XML syntax rules.</li>
+                                <li>Web server</li>
+                            </ol>
+                        </LI>
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
+                            <p class="text-center">Attempt any two questions. (very long questions) (2x16=32)</p>
                         </b>
-                        <li>What are the advantages of using CSS in Web pages? what are the different types of Selection
-                            in CSS?</li>
-                        <li> Whare the pop-up boxes avaiblae in JavaScript? Illustrate with programming example.</li>
-                        <li>Whare the rules for writting XML? Write an XML schema to describe "address" as an element
-                            and "city, state, street and house-no" as its attributes.</li>
-                        <li>Explain regular expression with their meaning. Develop java script program to solve given
-                            problem. Input two numbers using getElementById and add them and display result using the
-                            alert box.</li>
+                        <li>DEfine pop up box in javascript. Explain various popup boxes with example.</li>
+                        <li>a. Define CSS. Explain external CSS with example. <br>
+                            b. What is XML schema? Explain any three XML restriction with example. </li>
+                        <li>What is form validation? Validate First name and Email Id of student in javascript. First name must contain alphabets only and Email id should be valid as usual.</li>
                     </ol>
                 </div>
             </div>
