--- a/csit/5sem/web/2078.html
+++ b/csit/5sem/web/2078.html
@@ -74,14 +74,14 @@
                     <a href="2074.html"><button type="button" class="btn ">2074</button></a>
                     <a href="2075.html"><button type="button " class="btn">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2078.html"><button type="button" class="btn ">2078</button></a>
-                    <a href="#"><button type="button " class="btn   paper-year-style ">2079</button></a>
+                    <a href="#"><button type="button" class="btn   paper-year-style">2078</button></a>
+                    <a href="2079.html"><button type="button " class="btn ">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
+                <p>End-Term Examination-2078</p>
                 <p>Web Technology I (CSIT.316)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
@@ -102,36 +102,45 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>why is XML namesspace significance?</li>
-                        <li>How many types of heading does an HTML contain?</li>
-                        <li>What is RWD (Responsive Web Page Design)?</li>
-                        <li>What is the Box Model in CSS?</li>
-                        <li>What is DOM? What is the use of document object?</li>
-                        <li>How to create objects in JavaScript?</li>
-                        <li>What is a well formed XML document?</li>
-                        <li>Define web server.</li>
+                        <li>Write the structure of HTTP requrest and response message.</li>
+                        <li>How will you create a password field in a HTML form?</li>
+                        <li>What is #PCDATA?</li>
+                        <li>Why has javascript been called dynamically typed language?</li>
+                        <li>How do you create Array in javascript?</li>
+                        <li> Define selectors in CSS.</li>
+                        <li>HOw do you add background image and colour in your web page.</li>
+                        <li>Define Web 2.0.</li>
                         <h5 class="text-center">Group B</h5>
                         <b>
                             <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
                         </b>
-                        <li>How do you use external CSS file in the webpage?</li>
-                        <li>Describe HTTP with its header fields and functions.</li>
-                        <li>Write javascript code to valide mobile number and email address.</li>
-                        <li>Differentiate between DTD and XML schema. Also mention the features of XML.</li>
-                        <li>What is HTML link? Explain different link used in html.</li>
-                        <li>Explain ordered and unorderd list in HTML with its significance.</li>
+                        <li>Describe the structure of HTML in bried. Also mention the use ofrowspan and colspan in table. </li>
+                        <li>What are the uses and mis uses of Internet In your opinions? Explain in brief.</li>
+                        <li>Explain any four javascript array methods with syntax and example.</li>
+                        <li>Define regular expression. Write a javascript code to validate Email address.</li>
+                        <li>Wht is DTD? Explain the creation of external DTD with example.</li>
+                        <li>Write short notes on (any two)
+                            <ol type="a">
+                                <li>JavaScript Cookies</li>
+                                <li>Advantage of XML.</li>
+                                <li>XML DOM</li>
+                            </ol>
+                        </li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
                         </b>
-                        <li>What are the advantages of using CSS in Web pages? what are the different types of Selection
-                            in CSS?</li>
-                        <li> Whare the pop-up boxes avaiblae in JavaScript? Illustrate with programming example.</li>
-                        <li>Whare the rules for writting XML? Write an XML schema to describe "address" as an element
-                            and "city, state, street and house-no" as its attributes.</li>
-                        <li>Explain regular expression with their meaning. Develop java script program to solve given
-                            problem. Input two numbers using getElementById and add them and display result using the
-                            alert box.</li>
+                       <li>Briefly explain the various types of dialogue boxes in Javascript with example.</li>
+                       <li>Define XML schema. What are the rules of writing XML? Generate the XML and XML schema for the given
+                         problem. Create a root element say class with child student and student have further three child Fname, Lname, and age where Fname and Lname must be string type and age should be integer. And should be in proper sequence also? 
+                       </li>
+                       <li>Describe the importance of CSS. Explain internal and external CSS with suitable example.</li>
+                       <li> Write a complete javascript program to find sum of two numbers using <b>getElementById()</b>
+                          method as given below. Result should be displayed when click on SUM button. <br>
+                          <label for="a" style="margin-right: 23px;">Enter first Number:</label> <input type="text" id="a"> <br> <br>
+                          <label for="b">Enter second Number:</label> <input type="text" id="b"> <br> <br>
+                          <button type="button" style="margin-right: 105px;">SUM</button> <input type="text">
+                    </li>
                     </ol>
                 </div>
             </div>
