--- a/csit/6sem/crypto/2075.html
+++ b/csit/6sem/crypto/2075.html
@@ -70,80 +70,71 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2073.html"><button type="button" class="btn">2073</button></a>
-                    <a href="2074.html"><button type="button" class="btn ">2074</button></a>
-                    <a href="2075.html"><button type="button " class="btn">2075</button></a>
+                    <a href="2074.htm"><button type="button" class="btn ">2074</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2078.html"><button type="button" class="btn ">2078</button></a>
-                    <a href="#"><button type="button " class="btn   paper-year-style ">2079</button></a>
+                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
-                <p>Web Technology I (CSIT.316)</p>
+                <p>End-Term Examination-2075</p>
+                <p> Introduction to Cryptography (CSIT.321)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Fifth <br>
+                        <b>Semester:</b> Sixth <br>
                     </div>
-                    <div class="col-md-3 text-end">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                    <div class="col-md-3 text-start">
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2hrs 40 minutes
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>why is XML namesspace significance?</li>
-                        <li>How many types of heading does an HTML contain?</li>
-                        <li>What is RWD (Responsive Web Page Design)?</li>
-                        <li>What is the Box Model in CSS?</li>
-                        <li>What is DOM? What is the use of document object?</li>
-                        <li>How to create objects in JavaScript?</li>
-                        <li>What is a well formed XML document?</li>
-                        <li>Define web server.</li>
-                        <h5 class="text-center">Group B</h5>
-                        <b>
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
-                        </b>
-                        <li>How do you use external CSS file in the webpage?</li>
-                        <li>Describe HTTP with its header fields and functions.</li>
-                        <li>Write javascript code to valide mobile number and email address.</li>
-                        <li>Differentiate between DTD and XML schema. Also mention the features of XML.</li>
-                        <li>What is HTML link? Explain different link used in html.</li>
-                        <li>Explain ordered and unorderd list in HTML with its significance.</li>
+                       <li>What are the objectives of modern cryptography? Differentiate between cryptography and steganography.</li>
+                       <li>Define security attack. Explain its types. Differentiate between symmetric and asymmetric cipher.</li>
+                       <li>What is DES? Explain its features . EXplain one round of DES encryption.</li>
+                       <li>Explain kerchoff's principle. Differentiate between block cipher and stream cipher.</li>
+                       <li>What is cryptographic hash function? What are its application? explain SHA-512 algorithm with its block diagram.</li>
+                       <li>What is length and padding field? What is the number of padding bits if the length of the original message is (a) 5060 bits (b) 20 bits  (c) 6666 bits?</li>
+                       <li>Explain the types of intruders. Differentiate between firewall and IDS.</li>
+                       <li>Write short notes on:(any two )</li>
+                       <i class="kerberos">
+                        ii.Affine cipher
+                        iii.Chinese reminder theorem
+                       </i>
+
+                        
+
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
+                            <p class="text-center">Attempt any two  questions.  (2x16=32)</p>
                         </b>
-                        <li>What are the advantages of using CSS in Web pages? what are the different types of Selection
-                            in CSS?</li>
-                        <li> Whare the pop-up boxes avaiblae in JavaScript? Illustrate with programming example.</li>
-                        <li>Whare the rules for writting XML? Write an XML schema to describe "address" as an element
-                            and "city, state, street and house-no" as its attributes.</li>
-                        <li>Explain regular expression with their meaning. Develop java script program to solve given
-                            problem. Input two numbers using getElementById and add them and display result using the
-                            alert box.</li>
+                      <li>What do you mean by man-in-the-middle attack? What are the security approaches of RSA algorithm? Explain RSA algorithm and trace it with suitable example.</li>
+                      <li>How  can you define  digital signature? Explain digital signature standard (DSS) algorithm and trace it with example.</li>
+                      <li>what are the properties of cryptographic hash function? How can you check integrity of a message? explain modification detection code with its block diagram and example./li>
+                        
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Fifth Semester</h4>
+                <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
-                    <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
-                    <li><a href="../cd/2079.html">Compiler Design</a></li>
-                    <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
-                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
-                    <li><a href="#">Web Technology I</a></li>
+                    <li><a href="#">Introduction to Cryptography</a></li>
+                    <li><a href="">Java Progamming I</a></li>
+                    <li><a href="">Research Methodology for CS</a></li>
+                    <li><a href="">Software Engineering</a></li>
+                    <li><a href="">Web Tech II</a></li>
+                    <li><a href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
